fixed fitness filter showing up on small screens

--- a/public/Style/style.css
+++ b/public/Style/style.css
@@ -342,6 +342,10 @@ FILTER STYLING
     margin: 5px;
 }
 
+#fitness-filter {
+    display: none; 
+}
+
 
 /* *************************************
 PORTFOLIO STYLING
